solved the overflow behavior of the details screen

--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -1,5 +1,6 @@
 .details{
     flex: 0.8;
+    overflow:scroll ;
 
     .user{
         padding: 30px 20px;
